--- a/draft-scenarios/clash/mines_of_eldurim.tex
+++ b/draft-scenarios/clash/mines_of_eldurim.tex
@@ -18,8 +18,10 @@ This Scenario plays out over 8-10 Rounds.
 \textbf{Starting Income:} 10 \svg{gold}, 2 \svg{building_materials}, 1 \svg{valuables}
 
 \textbf{Starting Units:}
-\begin{itemize}
-  \item A Few cheapest \silver\ Units
+\begin{itemize}\begin{center}
+•
+\end{center}
+  \item A Pack of chosen \bronze\ Units
 \end{itemize}
 
 \textbf{Town Buildings:}
@@ -38,7 +40,7 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 \end{itemize}
 
 \subsection*{\MakeUppercase{Victory Condition}}
-When a player captures their \nth{6} mine or settlement, all players -- including that player -- take one final turn. After these turns or at the end of \nth{10} Round the game ends. The player who controls the most mines or settlements is the winner. If case of a tie, the tied player with most \svg{gold} is the winner.
+When a player captures their \nth{6} mine or settlement, all players -- including that player -- take one final turn. After those turns, or at the end of Round 10 (which ever comes first) the game ends. The player who controls the most mines and/or settlements is the winner. If case of a tie, the tied player with most \svg{gold} is the winner.
 
 \subsection*{\MakeUppercase{Timed Events}}
 \textbf{\nth{2} Round:}
@@ -53,7 +55,7 @@ When a player captures their \nth{6} mine or settlement, all players -- includin
 \begin{itemize}
   \item Players gain income every Round.
   \item A Secondary Hero starting their turn on I or II-III Map Tile gains +1 \svgeven{movement}.
-  \item \textbf{Obelisks:} Choose a Visitable Field from any IV-V Map Tile and gain it's reward.
+  \item \textbf{Obelisks:} Choose one adjacent Visitable Field and gain its reward.
 \end{itemize}
 
 \begin{center}
