--- a/draft-scenarios/clash/mines_of_eldurim.tex
+++ b/draft-scenarios/clash/mines_of_eldurim.tex
@@ -18,9 +18,7 @@ This Scenario plays out over 8-10 Rounds.
 \textbf{Starting Income:} 10 \svg{gold}, 2 \svg{building_materials}, 1 \svg{valuables}
 
 \textbf{Starting Units:}
-\begin{itemize}\begin{center}
-•
-\end{center}
+\begin{itemize}
   \item A Pack of chosen \bronze\ Units
 \end{itemize}
 
@@ -40,12 +38,12 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 \end{itemize}
 
 \subsection*{\MakeUppercase{Victory Condition}}
-When a player captures their \nth{6} mine or settlement, all players -- including that player -- take one final turn. After those turns, or at the end of Round 10 (which ever comes first) the game ends. The player who controls the most mines and/or settlements is the winner. If case of a tie, the tied player with most \svg{gold} is the winner.
+When a player captures their \nth{6} mine or settlement, all players -- including that player -- take one final turn. After those turns, or at the end of Round 10 (whichever comes first), the game ends. The player controlling the most mines and/or settlements wins. In case of a tie, the tied player with most \svg{gold} wins.
 
 \subsection*{\MakeUppercase{Timed Events}}
 \textbf{\nth{2} Round:}
 \begin{itemize}
-  \item Players may gain either 10 \svg{gold}, 5 \svg{building_materials} or 2 \svg{valuables}.
+  \item Each Player may Empower one Statistic Card from their Hand.
 \end{itemize}
 \textbf{\nth{3}, \nth{5} and \nth{7} Round:}
 \begin{itemize}
