--- a/draft-scenarios/clash/obelisk.tex
+++ b/draft-scenarios/clash/obelisk.tex
@@ -3,7 +3,8 @@
 
 \begin{multicols*}{2}
 
-\textbf{Author:} Pinkerton
+\textbf{Author:} Pinkerton, biigrick, LAAMAKALA
+
 \textbf{Source:} \href{<https://discord.com/channels/740870068178649108/1232319328049954826>}{Archon discord}
 
 \textit{The map is torn, the path unclear — but the obelisks call. Rally your armies, master your magic, and stake your claim before another hero takes the prize.}
@@ -20,8 +21,8 @@ Choose starting \textbf{Resources, Income, Units} and \textbf{Town Buildings} fr
 Take the following Map Tiles and arrange them as shown in the Scenario map layout ($P$ stands for the number of players):
 
 \begin{itemize}
-  \item 6P × Starting (I) Map Tiles
-  \item 2P × Far (II-III) Map Tiles
+  \item P × Starting (I) Map Tiles
+  \item 2P × Far (II-III) Map Tiles (Map Pool)
   \item 7 × Near (IV-V) Map Tiles (4 with Obelisks)
 \end{itemize}
 
@@ -31,18 +32,19 @@ The game ends when one or more Victory Condition is met: Player who
   \item starts their turn controlling two or more Obelisks or
   \item controls two or more Obelisks at the end of Round 10,
 \end{itemize}
-wins the game. If none of the Victory Conditions are met, the Player controlling the Center Obelisk wins the game.
+wins the game. If none of the Victory Conditions are met or in the case of a tie, the Player controlling the Center Obelisk wins the game.
 
 \subsection*{\MakeUppercase{Timed Events}}
-\textbf{\nth{3}, \nth{5} and \nth{7} Round:}
+\textbf{\nth{3}, \nth{6} and \nth{8} Round:}
 \begin{itemize}
   \item Remove all Black Cubes from the Map.
 \end{itemize}
+
 \subsection*{\MakeUppercase{Additional Rules}}
 \begin{itemize}
-  \item Players gain income every Round.
   \item \textbf{Obelisk:} If you are first Player to flag the Obelisk, choose one adjacent visitable Field and gain its reward.
   \item Any Hero starting their turn on a Far Tile gains +1 \svgeven{movement}.
+  \item \textbf{Optional:} Players gain income every Round.
 \end{itemize}
 
 \begin{center}
@@ -51,19 +53,3 @@ wins the game. If none of the Victory Conditions are met, the Player controlling
   \captionof{figure}{\textbf{SCENARIO MAP LAYOUT}}
   \vfill
 \end{center}
-
-\end{multicols*}
-
-\textbf{Starting Resources:} 15 \svg{gold}, 2 \svg{building_materials}, 1 \svg{valuables}
-
-\textbf{Starting Income:} 10 \svg{gold}, 2 \svg{building_materials}, 1 \svg{valuables}
-
-\textbf{Starting Units:}
-\begin{itemize}
-  \item A Pack of chosen \bronze\ Units
-\end{itemize}
-
-\textbf{Town Buildings:}
-\begin{itemize}
-  \item \bronze\ Dwelling
-\end{itemize}
