added the to the name

--- a/draft-scenarios/clash/obelisk.tex
+++ b/draft-scenarios/clash/obelisk.tex
@@ -1,5 +1,5 @@
 % !TeX spellcheck = en_US
-\addscenariosection{1}{Clash Scenario}{Obelisk}{\images/obelisk.png}
+\addscenariosection{1}{Clash Scenario}{The Obelisk}{\images/obelisk.png}
 
 \begin{multicols*}{2}
 
@@ -42,9 +42,9 @@ wins the game. If none of the Victory Conditions are met or in the case of a tie
 
 \subsection*{\MakeUppercase{Additional Rules}}
 \begin{itemize}
-  \item \textbf{Obelisk:} If you are first Player to flag the Obelisk, choose one adjacent visitable Field and gain its reward.
+  \item \textbf{Obelisk:} If you are first Player to flag the Obelisk, choose one adjacent Visitable Field and gain its reward.
   \item Any Hero starting their turn on a Far Tile gains +1 \svgeven{movement}.
-  \item \textbf{Optional:} Players gain income every Round.
+  \item You may add any Additional Rules from other Scenarios.
 \end{itemize}
 
 \begin{center}
