--- a/draft-scenarios/clash/obelisk.tex
+++ b/draft-scenarios/clash/obelisk.tex
@@ -7,7 +7,7 @@
 
 \textbf{Source:} \href{<https://discord.com/channels/740870068178649108/1232319328049954826>}{Archon discord}
 
-\textit{The map is torn, the path unclear — but the obelisks call. Rally your armies, master your magic, and stake your claim before another hero takes the prize.}
+\textit{The map is torn, the path unclear — but the obelisks call. Rally your armies, master your magic, and stake your claim before another hero takes the prize.}  % no-check-caps
 
 \subsection*{\MakeUppercase{Scenario Length}}
 This Scenario plays out over 8-10 Rounds.
