--- a/draft-scenarios/clash/obelisk.tex
+++ b/draft-scenarios/clash/obelisk.tex
@@ -7,7 +7,7 @@
 
 \textbf{Source:} \href{<https://discord.com/channels/740870068178649108/1232319328049954826>}{Archon discord}
 
-\textit{The map is torn, the path unclear — but the obelisks call. Rally your armies, master your magic, and stake your claim before another hero takes the prize.}
+\textit{The map is torn, the path unclear — but the obelisks call. Rally your armies, master your magic, and stake your claim before another hero takes the prize.}  % no-check-caps
 
 \subsection*{\MakeUppercase{Scenario Length}}
 This Scenario plays out over 8-10 Rounds.
@@ -17,12 +17,13 @@ This Scenario plays out over 8-10 Rounds.
 
 Choose starting \textbf{Resources, Income, Units} and \textbf{Town Buildings} from any Scenario.
 
+\textbf{Map Tile Pool:} Each player takes 2 random Far (II--III) Map Tiles.
+
 \subsection*{\MakeUppercase{Map Setup}}
 Take the following Map Tiles and arrange them as shown in the Scenario map layout ($P$ stands for the number of players):
 
 \begin{itemize}
   \item P × Starting (I) Map Tiles
-  \item 2P × Far (II-III) Map Tiles (Map Pool)
   \item 7 × Near (IV-V) Map Tiles (4 with Obelisks)
 \end{itemize}
 
