--- a/draft-scenarios/clash/obelisk.tex
+++ b/draft-scenarios/clash/obelisk.tex
@@ -54,3 +54,6 @@ wins the game. If none of the Victory Conditions are met or in the case of a tie
   \captionof{figure}{\textbf{SCENARIO MAP LAYOUT}}
   \vfill
 \end{center}
+
+\end{multicols*}
+
