--- a/draft-scenarios/clash/obelisk.tex
+++ b/draft-scenarios/clash/obelisk.tex
@@ -5,7 +5,7 @@
 
 \textbf{Author:} Pinkerton, biigrick, LAAMAKALA
 
-\textbf{Source:} \href{<https://discord.com/channels/740870068178649108/1232319328049954826>}{Archon Studio's Discord}
+\textbf{Source:} \href{https://discord.com/channels/740870068178649108/1232319328049954826}{Archon Studio's Discord}
 
 \textit{The map is torn, the path unclear — but the obelisks call. Rally your armies, master your magic, and stake your claim before another hero takes the prize.}  % no-check-caps
 
