--- a/draft-scenarios/clash/obelisk.tex
+++ b/draft-scenarios/clash/obelisk.tex
@@ -36,7 +36,7 @@ The game ends when one or more Victory Condition is met: Player who
 wins the game. If none of the Victory Conditions are met or in the case of a tie, the Player controlling the Center Obelisk wins the game.
 
 \subsection*{\MakeUppercase{Timed Events}}
-\textbf{\nth{3}, \nth{6} and \nth{8} Round:}
+\textbf{\nth{3}, \nth{6} and \nth{8} Rounds:}
 \begin{itemize}
   \item Remove all Black Cubes from the Map.
 \end{itemize}
