--- a/draft-scenarios/clash/obelisk.tex
+++ b/draft-scenarios/clash/obelisk.tex
@@ -28,7 +28,7 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 \end{itemize}
 
 \subsection*{\MakeUppercase{Victory Condition}}
-The game ends when one or more Victory Condition is met: Player who
+The game ends when one or more Victory Conditions are met: Player who
 \begin{itemize}
   \item starts their turn controlling two or more Obelisks or
   \item controls two or more Obelisks at the end of Round 10,
