--- a/translations/bloody_grail.tex/pl.po
+++ b/translations/bloody_grail.tex/pl.po
@@ -173,7 +173,7 @@ msgstr ""
 "\\textbf{Jednostki Początkowe:}\n"
 "\\begin{itemize}\n"
 "  \\item Garstka \\svg{bronze} Jednostek o \\textit{najwyższym} koszcie Rekrutacji\n"
-"  \\item Grupa \\svg{bronze} Kednostek o \\textit{najniższym} koszcie Rekrutacji\n"
+"  \\item Grupa \\svg{bronze} Jednostek o \\textit{najniższym} koszcie Rekrutacji\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -235,7 +235,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Dla Scenariusza czetroosobowego:}\n"
+"\\textbf{Dla Scenariusza czteroosobowego:}\n"
 "\\begin{itemize}\n"
 "  \\item 4 × Początkowy (I) Kafelek Mapy\n"
 "  \\item 6 × Bliski (IV--V) Kafelek Mapy, z których 4 muszą zawierać Obelisk\n"
