--- a/translations/close_to_enemies.tex/pl.po
+++ b/translations/close_to_enemies.tex/pl.po
@@ -346,8 +346,8 @@ msgstr ""
 "  \\item \\textbf{Wspólna Pula:}\n"
 "  \\begin{itemize}\n"
 "    \\item Usuń wszystkie Dalekie (II--III) Kafelki bez Osad z Mapy\n"
-"    \\item Potasuj zebrane Kafelki razem pozostałymi przygotowymi\n"
-"    \\item Połż potasowane Kafelki na Mapę w losowej kolejności\n"
+"    \\item Potasuj zebrane Kafelki razem z pozostałymi przygotowanymi\n"
+"    \\item Połóż potasowane Kafelki na Mapę w losowej kolejności\n"
 "    \\item Pozostałe Kafelki tworzą wspólną pulę\n"
 "  \\end{itemize}\n"
 "\\end{itemize}\n"
@@ -372,7 +372,7 @@ msgid ""
 "Prepare an AI Deck for Settlement defenders.\n"
 "\n"
 msgstr ""
-"Przygotują Talię AI dla Obrońców Osad.\n"
+"Przygotuj Talię AI dla Obrońców Osad.\n"
 "\n"
 
 #. type: multicols
@@ -677,7 +677,7 @@ msgstr ""
 "      \\begin{tabularx}{0.95\\linewidth}{p{0.2\\linewidth}XXXX} &\n"
 "      \\darkcell{\\textbf{Łatwy}} &\n"
 "      \\darkcell{\\textbf{Normalny}} &\n"
-"      \\darkcell{\\textbf{Truny}} &\n"
+"      \\darkcell{\\textbf{Trudny}} &\n"
 "      \\darkcell{\\textbf{Niemożliwy}}\\\\\n"
 "      \\darkcell[1.2]{Pierwsza fala}\n"
 "        & \\lightcell[1.2]{\\bronze}\n"
