--- a/translations/sentinels.tex/pl.po
+++ b/translations/sentinels.tex/pl.po
@@ -581,7 +581,7 @@ msgstr ""
 "\\begin{itemize}\n"
 "  \\item W Rundzie 10. pojawia się Finałowa Armia. Różni się od poprzednich tym, że jest wzmocniona ustaloną pulą Neutralnych Jednostek (pula wzmocnień = liczba w nawiasach w tabeli poniżej).\n"
 "  \\item Na początku 2. Rundy Walki i w każdej kolejnej Rundzie do armii dołączają 2 Jednostki z potasowanej puli wzmocnień (maksymalnie do 5 Jednostek), aby kontynuować Walkę aż do wycofania się gracza lub zabicia każdej Jednostki Neutralnej z puli wzmocnień. \\textit{Jeśli liczba Jednostek wroga na początku Rundy wynosi 1 lub mniej, dobierz do 4 Jednostek (tj. na planszy zawsze jest 4 lub 5 Jednostek wroga po wzmocnieniu, jeśli są dostępne).}\n"
-"  \\item Umieść Jednostki wzmacniające drugiej linii wroga, zaczynając od lewej strony od Jednostek z najniższą Inicjatywą (najpierw Jednostki \\svg{unit_ranged}). W razie potrzeby kontynuuj na pierwszej linii w tej samej kolejności.\n"
+"  \\item Umieść Jednostki wzmacniające na drugiej linii wroga, zaczynając od lewej strony od Jednostek z najniższą Inicjatywą (najpierw Jednostki \\svg{unit_ranged}). W razie potrzeby kontynuuj na pierwszej linii w tej samej kolejności.\n"
 "  \\item Gdy gracz się wycofa, armia wroga dobiera do ,,minimum'' 4 Jednostek i bierze je jako początkowe Jednostki do kolejnej Walki.\n"
 "\\end{itemize}\n"
 "\n"
