--- a/translations/the_hunt.tex/pl.po
+++ b/translations/the_hunt.tex/pl.po
@@ -479,7 +479,7 @@ msgstr ""
 "\\item \\textit{Skłonność do Gromadzenia:} Na początku każdej tury losowo "
 "wybierz Kartę z potasowanego stosu odrzuconych Artefaktów. Jeśli Artefakt "
 "to: \\begin{itemize} \\item Broń: Smok zyskuje atak zionięciem, który omiata "
-"trzy stworzeniach w rzędzie. Jednostka bezpośrednio trafiona w środku "
+"trzy stworzenia w rzędzie. Jednostka bezpośrednio trafiona w środku "
 "otrzymuje pełne obrażenia, podczas gdy Jednostki po obu stronach cierpią o "
 "3\\,\\svg{damage-red} mniej. \\item Część zbroi, tarcza lub odzież: Smok "
 "zyskuje 3\\,\\svg{defense}, oznaczane przez wolne Kostki Frakcji. Usuń je po "
@@ -585,7 +585,7 @@ msgstr ""
 "zależności od typu pochłoniętego Golema: \\begin{itemize} \\item "
 "Pochłonięcie Złotego Golema: Usuń 2 \\svg{damage-red}.  \\item Pochłonięcie "
 "Diamentowego Golema: Usuń 4 \\svg{damage-red}.  \\item[] \\textbf{Uwaga:} "
-"Kryształowy Smok może ppochłonąć pochłonąć tylko jednego Golema na turę.  "
+"Kryształowy Smok może pochłonąć tylko jednego Golema na turę.  "
 "\\end{itemize} \\item Zdolności Golemów: Złote i Diamentowe Golemy nie "
 "posiadają żadnych specjalnych zdolności poza tymi określonymi na ich "
 "kartach. Służą głównie jako pożywka dla Kryształowego Smoka do odzyskiwania "
@@ -682,8 +682,8 @@ msgstr ""
 "ich lokalizacje. \\item Rdzawy Smok nie może umieszczać kwasu na tych samych "
 "polach, co w poprzedniej Rundzie. Oznacz Pola za pomocą wolnych Kostek "
 "Frakcyji, aby wskazać Pola, gdzie znajdował się kwas. \\item Pola z kwasem "
-"siarkowym stanowią Przeszkdy na Polu bitwy i utrudniają ruch tylko przez "
-"jedną Rundę. Są Przeszkdami zarówno dla graczy, jak i dla Smoka. \\item "
+"siarkowym stanowią Przeszkody na Polu bitwy i utrudniają ruch tylko przez "
+"jedną Rundę. Są Przeszkodami zarówno dla graczy, jak i dla Smoka. \\item "
 "Pasywna zdolność Rdzawego Smoka, \\textit{Korozja}, obniża pancerz Jednostki "
 "przeciwnika o 2 przy każdym ataku. Umieść dodatkową Kostkę Frakcji na karcie "
 "Jednostki, aby wskazać ten efekt. Korozja może się kumulować do -4\\,"
