--- a/campaigns/inferno_deal_with_the_devil.tex
+++ b/campaigns/inferno_deal_with_the_devil.tex
@@ -255,7 +255,7 @@ They are fools to think these will help them overcome our Kreegan fortress.
       &
       & \\
       \darkcellleft[2.8]{Castle Charging Army \#2}
-      & \lightcellleft[2.8]{Pack of Champions\\Pack of Zealots\\Few Crusaders\\Few Grifins\\Pack of Halberdiers}
+      & \lightcellleft[2.8]{Pack of Champions\\Pack of Zealots\\Few Crusaders\\Few Griffins\\Pack of Halberdiers}
       &
       & \\
       \darkcellleft[4.4]{Final Charging Army}
