--- a/campaigns/inferno_steadwicks_fall.tex
+++ b/campaigns/inferno_steadwicks_fall.tex
@@ -195,7 +195,7 @@ You lose if any of the following occur:
 During this ``Inferno'' Campaign Scenario, the following rules apply:
 
 \begin{itemize}
-    \item General Kendal does not move and only waits in his Town. He start with Walls, Gate,
+    \item General Kendal does not move and only waits in his Town. He starts with Walls, Gate,
       and Arrow Tower on his side of the Combat Board.
     \item The difficulty Level of every Combat encounter on the map increases by one till the end of the Scenario
       (see page 35, ``Field Difficulty Level Table'' in the Core Rulebook).
