--- a/coops/close_to_enemies.tex
+++ b/coops/close_to_enemies.tex
@@ -87,7 +87,7 @@ Prepare an AI Deck for Settlement defenders.
 \textbf{\nth{2} Round:}
 \begin{itemize}
   \item The first wave of Enemy Clan armies attacks all Towns (see section below).
-  \item After defending their Town, each player may may hire a Secondary Hero for 5~\svg{gold} during this Round. This still requires spending a Population Token.
+  \item After defending their Town, each player may hire a Secondary Hero for 5~\svg{gold} during this Round. This still requires spending a Population Token.
 \end{itemize}
 \textbf{\nth{3} Round:}
 \begin{itemize}
