--- a/sections/what_to_play.tex
+++ b/sections/what_to_play.tex
@@ -23,7 +23,7 @@ There is a 3-Scenario Inferno \pagelink{1. A Devilish Plan}{Dungeons and Devils}
 
 \subsection*{Recommendations}
 
-For information regarding your play time, strategizing, and custom rules, checkout out \pagelink{Recommendations}{Recommendations} at the and of this book.
+For information regarding your play time, strategizing, and custom rules, check out \pagelink{Recommendations}{Recommendations} at the end of this book.
 
 \end{multicols}
 
