--- a/translations/castle_sicilian_dragon.tex/cs.po
+++ b/translations/castle_sicilian_dragon.tex/cs.po
@@ -579,7 +579,7 @@ msgid ""
 "    You may recruit any, or all of them by paying their cost.\n"
 "    Shuffle any un-hired ones back into their Decks.\n"
 "  \\item The Grail may be sold at a trading post for 30 \\svg{gold} \\textit{or} \\textbf{Search (3)} the relic Deck, twice.\n"
-"  \\item When fighting the enemy at thier Town, they have a Citadel.\n"
+"  \\item When fighting the enemy at their Town, they have a Citadel.\n"
 "    Don't forget to add the walls and arrow tower to make the battle a siege.\n"
 "\\end{itemize}\n"
 "\n"
