--- a/translations/inferno_deal_with_the_devil.tex/pl.po
+++ b/translations/inferno_deal_with_the_devil.tex/pl.po
@@ -886,7 +886,7 @@ msgid ""
 "      &\n"
 "      & \\\\\n"
 "      \\darkcellleft[2.8]{Castle Charging Army \\#2}\n"
-"      & \\lightcellleft[2.8]{Pack of Champions\\\\Pack of Zealots\\\\Few Crusaders\\\\Few Grifins\\\\Pack of Halberdiers}\n"
+"      & \\lightcellleft[2.8]{Pack of Champions\\\\Pack of Zealots\\\\Few Crusaders\\\\Few Griffins\\\\Pack of Halberdiers}\n"
 "      &\n"
 "      & \\\\\n"
 "      \\darkcellleft[4.4]{Final Charging Army}\n"
