--- a/translations/the_fractured_kingdoms.tex/fr.po
+++ b/translations/the_fractured_kingdoms.tex/fr.po
@@ -294,7 +294,7 @@ msgid ""
 "\\begin{itemize}\n"
 "  \\item 2 VP for flagging a Dragon Utopia for the first time\n"
 "  \\item 2 VP for having the Dragon Utopia flagged at the end of the game\n"
-"  \\item 5 VP for bringing the Grail to your Faction Town OR 3 VP for being in possesion of the Grail at the end of the game\n"
+"  \\item 5 VP for bringing the Grail to your Faction Town OR 3 VP for being in possession of the Grail at the end of the game\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -310,7 +310,7 @@ msgid ""
 "  \\item The monoliths start inactive (place them the inactive \\svg[12]{movement_token_red} side up).\n"
 "    Heroes must pay 1~\\svg{building_materials} and 1~\\svgeven{movement} to activate them.\n"
 "  \\item Heroes can destroy monoliths by paying 1~\\svgeven{movement}.\n"
-"    Flip a destroyd monolith the \\svg[12]{movement_token_red} side up.\n"
+"    Flip a destroyed monolith to the \\svg[12]{movement_token_red} side up.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
