--- a/clash/the_fractured_kingdoms.tex
+++ b/clash/the_fractured_kingdoms.tex
@@ -70,7 +70,7 @@ Victory Points are counted in accordance to the Tournament book. Additionally, y
 \begin{itemize}
   \item 2 VP for flagging a Dragon Utopia for the first time
   \item 2 VP for having the Dragon Utopia flagged at the end of the game
-  \item 5 VP for bringing the Grail to your Faction Town OR 3 VP for being in possesion of the Grail at the end of the game
+  \item 5 VP for bringing the Grail to your Faction Town OR 3 VP for being in possession of the Grail at the end of the game
 \end{itemize}
 
 \subsection*{\MakeUppercase{Optional Rules}}
@@ -80,7 +80,7 @@ Victory Points are counted in accordance to the Tournament book. Additionally, y
   \item The monoliths start inactive (place them the inactive \svg[12]{movement_token_red} side up).
     Heroes must pay 1~\svg{building_materials} and 1~\svgeven{movement} to activate them.
   \item Heroes can destroy monoliths by paying 1~\svgeven{movement}.
-    Flip a destroyd monolith the \svg[12]{movement_token_red} side up.
+    Flip a destroyed monolith to the \svg[12]{movement_token_red} side up.
 \end{itemize}
 
 \end{multicols}
