--- a/translations/close_to_enemies.tex/close_to_enemies.tex.pot
+++ b/translations/close_to_enemies.tex/close_to_enemies.tex.pot
@@ -353,7 +353,7 @@ msgid ""
 "\\textbf{\\nth{2} Round:}\n"
 "\\begin{itemize}\n"
 "  \\item The first wave of Enemy Clan armies attacks all Towns (see section below).\n"
-"  \\item After defending their Town, each player may may hire a Secondary Hero for 5~\\svg{gold} during this Round. This still requires spending a Population Token.\n"
+"  \\item After defending their Town, each player may hire a Secondary Hero for 5~\\svg{gold} during this Round. This still requires spending a Population Token.\n"
 "\\end{itemize}\n"
 "\\textbf{\\nth{3} Round:}\n"
 "\\begin{itemize}\n"
