--- a/translations/what_to_play.tex/cs.po
+++ b/translations/what_to_play.tex/cs.po
@@ -141,7 +141,7 @@ msgstr ""
 #: sections/what_to_play.tex:27
 #, no-wrap
 msgid ""
-"For information regarding your play time, strategizing, and custom rules, checkout out \\pagelink{Recommendations}{Recommendations} at the and of this book.\n"
+"For information regarding your play time, strategizing, and custom rules, check out \\pagelink{Recommendations}{Recommendations} at the end of this book.\n"
 "\n"
 msgstr ""
 "Pro informace týkající se herní doby, strategie a vlastních pravidel, se podívejte na \\pagelink{Doporučení}{Doporučení} na konci této knihy.\n"
