--- a/translations/what_to_play.tex/pl.po
+++ b/translations/what_to_play.tex/pl.po
@@ -142,7 +142,7 @@ msgstr ""
 #: sections/what_to_play.tex:27
 #, no-wrap
 msgid ""
-"For information regarding your play time, strategizing, and custom rules, checkout out \\pagelink{Recommendations}{Recommendations} at the and of this book.\n"
+"For information regarding your play time, strategizing, and custom rules, check out \\pagelink{Recommendations}{Recommendations} at the end of this book.\n"
 "\n"
 msgstr ""
 "Aby uzyskać informacje dotyczące czasu gry, strategii i niestandardowych zasad, zapoznaj się z \\pagelink{Zalecenia}{Zaleceniami} na końcu księgi.\n"
