--- a/draft-scenarios/clash/trial_by_combat.tex
+++ b/draft-scenarios/clash/trial_by_combat.tex
@@ -71,7 +71,7 @@ When any player first flags ``The Hill'', each player, including the one who fla
   \item The blocked Field on the Center Map Tile is a Magic Spring and does not count as blocked.
   \item All Fields on the Center Map Tile are visitable once per Faction.
   \item Players do not lose \svg{gold} for losing or retreating from any Combat.
-  \item After winning a combat against another player’s Main Hero, you may recruit or reinforce one of your Units that was defeated (reduced to 0 hitpoints) during the battle, at no cost.
+  \item After winning a combat against another player’s Main Hero or a Level VII Neutrals, you may recruit or reinforce one of your Units that was defeated (reduced to 0 hitpoints) during the battle, at no cost.
   \item \textbf{Obelisk:} You may spawn your defeated Main Hero on an Obelisk you have flagged. \textit{Flaggable for all players.}
   \item \textit{Optional:} At the beginning of each Round, roll two Attack Dice separately and apply the effect from the table below.
 \end{itemize}
