--- a/draft-scenarios/clash/blood_ore.tex
+++ b/draft-scenarios/clash/blood_ore.tex
@@ -1,5 +1,5 @@
 % !TeX spellcheck = en_US
-\addscenariosection{1}{Clash Scenario}{Mines of Eldurim}{\images/mines.png}
+\addscenariosection{1}{Clash Scenario}{Blood for Ore}{\images/mines.png}
 
 \begin{multicols*}{2}
 
@@ -58,7 +58,7 @@ When a player captures their \nth{6} mine or settlement, all players -- includin
 
 \begin{center}
   \vfill
-  \includegraphics[width=0.93\linewidth]{\maps/mines.png}
+  \includegraphics[width=0.93\linewidth]{\maps/blood_ore.png}
   \captionof{figure}{\textbf{SCENARIO MAP LAYOUT}}
   \vfill
 \end{center}
