minor addition to dragon utopia rule

--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -87,7 +87,7 @@ If no one controls a Dragon Utopia, all players lose.
   \item \textbf{Dragon Utopias} are guarded only by dragons.
   \item Upon flagging a \textbf{Dragon Utopia}, choose one option and then put a Black Cube:
   \begin{itemize}
-    \item Sacrifice any number of Units, then recruit one of the defeated dragons at a discount equal to the total recruitment cost of the sacrificed Units (to a minimum of 0).
+    \item Gain 5 \svg{gold} and sacrifice any number of Units, then recruit one of the defeated dragons at a discount equal to the total recruitment cost of the sacrificed Units (to a minimum of 0).
     \item Gain 15 \svg{gold} and Search (3) \svg{spellpower} or \svg{artifact}.
   \end{itemize}
 \end{itemize}
