--- a/translations/castle_sicilian_dragon.tex/de.po
+++ b/translations/castle_sicilian_dragon.tex/de.po
@@ -780,3 +780,7 @@ msgid ""
 "\\end{center}\n"
 "\n"
 msgstr ""
+"\\begin{center}\n"
+"  \\framedimage[0.75\\linewidth]{\\art/necropolis_town.jpg}\n"
+"\\end{center}\n"
+"\n"
