fixed map layout and timed events

--- a/draft-scenarios/clash/trial_by_combat.tex
+++ b/draft-scenarios/clash/trial_by_combat.tex
@@ -52,13 +52,13 @@ When any player first flags ``The Hill'', each player, including the one who fla
 \begin{itemize}
   \item Players may gain either 10 \svg{gold}, 4 \svg{building_materials} or 2 \svg{valuables}.
 \end{itemize}
-\textbf{\nth{3} Round:}
+\textbf{\nth{4} Round:}
 \begin{itemize}
-  \item Remove all Black Cubes from the Map.
+  \item Remove all Black Cubes from all Windmills and Water Wheels.
 \end{itemize}
-\textbf{\nth{5} Round:}
+\textbf{\nth{7} Round:}
 \begin{itemize}
-  \item Remove all Black Cubes.
+  \item Repeat Event of Round 4.
 \end{itemize}
 \textbf{\nth{8} Round:}
 \begin{itemize}
