removed word either

--- a/draft-scenarios/clash/trial_by_combat.tex
+++ b/draft-scenarios/clash/trial_by_combat.tex
@@ -50,7 +50,7 @@ When any player first flags ``The Hill'', each player, including the one who fla
 \end{itemize}
 \textbf{\nth{2} Round:}
 \begin{itemize}
-  \item Players may gain either 10 \svg{gold}, 4 \svg{building_materials} or 2 \svg{valuables}.
+  \item Players may gain 10 \svg{gold}, 4 \svg{building_materials} or 2 \svg{valuables}.
 \end{itemize}
 \textbf{\nth{4} Round:}
 \begin{itemize}
