--- a/draft-scenarios/clash/trial_by_combat.tex
+++ b/draft-scenarios/clash/trial_by_combat.tex
@@ -54,11 +54,11 @@ When any player first flags ``The Hill'', each player, including the one who fla
 \end{itemize}
 \textbf{\nth{4} Round:}
 \begin{itemize}
-  \item Remove all Black Cubes from all Windmills and Water Wheels.
+  \item Remove all Black Cubes from every Windmill, Water Wheel, Mystical Garden, Camp Fire and Pandora's Box.
 \end{itemize}
 \textbf{\nth{7} Round:}
 \begin{itemize}
-  \item Repeat Event of Round 4.
+  \item Repeat the Timed Event of Round 4.
 \end{itemize}
 \textbf{\nth{8} Round:}
 \begin{itemize}
